rooms module added & docs updated
